--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
+    <!-- <script src="js/tasks.js"></script> -->
+    <script src="js/restaurant.js"></script>
     <!-- <script src="js/practise.js"></script> -->
 </body>
 </html>
