add exercis 16(recursion-factorial)

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
     <!-- <script src="js/script.js"></script> -->
     <!-- <script src="js/tasks.js"></script> -->
-    <script src="js/restaurant.js"></script>
+    <script src="js/exercise16.js"></script>
     <!-- <script src="js/practise.js"></script> -->
 </body>
 </html>
